fixed z-index on sortable item

--- a/src/css/zip-dropdown.css
+++ b/src/css/zip-dropdown.css
@@ -9,7 +9,6 @@
   list-style: none;
   margin: -1em 0;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.23), 0 10px 40px rgba(0, 0, 0, 0.19);
-  z-index: 1;
   position: absolute;
 }
 
